Fri May 28 11:08:51 2004  George Lebl <jirka@5z.com>

	* configure.in: eek, evil we had GETTEXT_PACKAGE set to
	  gdm-2.4, but we want gdm-2.6 nowdays

	* daemon/gdm.c, daemon/misc.c: fix the ConsoleCannotHandle key
	  and cache it as soon as we can and also set
	  UNSAFE_TO_TRANSLATE=yes when forking something and console
	  can't handle the language

	* daemon/server.c: fix a minor fd leak and print a C locale
	  (don't want to translate this) error to the X log when the
	  X server cannot be exec'ed.

	* utils/gdmopen.c, utils/gdmtranslate.c, config/XKeepsCrashing:
	  Listen to UNSAFE_TO_TRANSLATE, since running shells in login
	  mode may modify the locale so we must force it to "C" where
	  we can if it is really unsafe (language in ConsoleCannotHandle)

Thu May 27 13:42:39 2004  George Lebl <jirka@5z.com>

	* gui/modules/dwellmouselistener.c, gui/modules/keymouselistener.c:
	  The screen code was wankered, it wanted HAVE_GTK_MULTIHEAD to be
	  defined to work properly and otherwise it confused bonobo which
	  is completely moronic (I mean bonobo is moronic) by using slightly
	  different (but perfectly legal) DISPLAY env var.

Wed May 26 18:23:14 2004  George Lebl <jirka@5z.com>

	* daemon/auth.c, daemon/display.c, daemon/gdm.[ch], daemon/misc.[ch],
	  daemon/server.c, daemon/slave.c, daemon/verify-pam.c, docs/C/gdm.xml,
	  config/gdm.conf.in:  Add a daemon/ConsoleCannotHandle key which
	  lists languages which should not be used on the console because
	  they won't work.  Uses "C" locale strings instead then.  Should
	  "fix" #135387, but I suppose there's no clean way to do this,
	  just let the distributors ship proper config files and have them
	  test it (yeah right).  I've tested the current set on RH9 and I
	  listed all of the ones that didn't work.

Wed May 26 17:34:51 2004  George Lebl <jirka@5z.com>

	* daemon/slave.c: Ensure proper .ICEauthority permissions, this
	  may fail on NFS, but who cares, there if it breaks it's beyond